--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = libs/imgui
 	url = https://github.com/ocornut/imgui.git
 	branch = docking
+[submodule "libs/glfw"]
+	path = libs/glfw
+	url = https://github.com/glfw/glfw.git
