Set ouput binary directory to bin/ folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(eZeGo VERSION 0.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 
 # set the project source code directory
-set(EZEGO_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/)
+set(EZEGO_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 
 # collect all the .cpp files recursively
 file(GLOB_RECURSE EZEGO_CPP_FILES ${EZEGO_SRC_DIR}/*.cpp)
@@ -16,6 +16,7 @@ add_executable(eZeGo ${EZEGO_CPP_FILES})
 target_include_directories(eZeGo PRIVATE ${EZEGO_SRC_DIR})
 
 
+set_target_properties(eZeGo PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
 
 
 # ------------------- Linking Libs ------------------- #
