--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,8 @@ target_link_libraries(eZeGo PRIVATE IMGUI)
 # Link GLFW library
 target_link_libraries(eZeGo PRIVATE glfw)
 
+# link rtmidi library
 target_link_libraries(eZeGo PRIVATE rtmidi)
+
+# link fmt library
+target_link_libraries(eZeGo PRIVATE fmt::fmt)
