--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -37,5 +37,8 @@ target_link_libraries(IMGUI PUBLIC ${OPENGL_LIBRARIES})
 add_subdirectory(glfw EXCLUDE_FROM_ALL)
 target_include_directories(IMGUI PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/glfw/include)
 
+# ------------------- fmt -------------------
+add_subdirectory(fmt)
+
 
 
