fixed Icon Header as submodule dependency

--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "libs/tracy"]
 	path = libs/tracy
 	url = https://github.com/wolfpld/tracy.git
+[submodule "libs/IconFontCppHeaders"]
+	path = libs/IconFontCppHeaders
+	url = https://github.com/juliettef/IconFontCppHeaders.git
