Added nlohmann/json as a submodule in libs

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -44,3 +44,7 @@ target_include_directories(IMGUI PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/glfw/includ
 add_library(CppIconHeaders INTERFACE)
 target_include_directories(CppIconHeaders INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/IconFontCppHeaders)
 
+
+
+# ------------------- json -------------------
+add_subdirectory(json)
